samples/_failures_safe/1761597811_8cd967_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_066073b9.c: In function ‘main’:
./samples/SAFE/__tmp_066073b9.c:186:5: error: expected declaration or statement at end of input
  186 |     }
      |     ^
